--- a/style.css
+++ b/style.css
@@ -1,1 +1,94 @@
+:root {
+    --primary: #0E76A8;
+    --light: #E1F1FD;
+}
 
+html,body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-color: var(--light);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.navbar{
+    padding: 0 20%;
+    background-color: #FFF;
+    height: 50px;
+    position: sticky;
+    top: 0;
+    box-shadow: 0 4px 12px -2px rgba(0,0,0,0.3);
+}
+
+.logo {
+    height: 40px;
+    margin: 5px;
+}
+
+.container {
+    min-height: 84%;
+    margin: 0 20%;
+}
+
+.title {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.6rem;
+    color: var(--primary);
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    /* height: 32vh;
+    overflow-y: scroll; */
+    justify-content: space-evenly
+}
+
+.see-more {
+    color: white;
+    background-color: var(--primary);
+    border: none;
+    border-radius: 4px;
+    display: block;
+    width: 80px;
+    height: 30px;
+    margin: 8px auto 0;
+}
+
+.project-card {
+    height: 150px;
+    width: 120px;
+    border: 2px solid var(--primary);
+    border-radius: 12px;
+    margin: 10px;
+    padding: 1em;
+}
+
+.archive {
+    width: 80%;
+    height: 40px;
+    border: 2px solid var(--primary);
+    border-radius: 8px;
+    margin: 1em 0;
+    padding: 0.5em;
+}
+
+.footer{
+    height: 50px;
+    margin-top: 40px;
+    padding: 0 20%;
+    background-color: #FFF;
+    border-top: 1px solid #c4c4c4;
+    /* box-shadow: 0 -4px 12px -2px rgba(0,0,0,0.3); */
+}
+
+.social {
+    float: right;
+    overflow: hidden;
+    margin: 0.5em 0.2em 0;
+    padding: 4px;
+    height: 24px;
+    width: 24px;
+    border: 1px solid var(--primary);
+    border-radius: 50%;
+}
