--- a/style.css
+++ b/style.css
@@ -54,14 +54,43 @@ html,body {
     height: 30px;
     margin: 8px auto 0;
 }
+.see-more:focus {
+    outline: none;
+}
 
 .project-card {
-    height: 150px;
-    width: 120px;
-    border: 2px solid var(--primary);
-    border-radius: 12px;
+    height: 240px;
+    width: 180px;
+    border: 1px solid var(--primary);
+    border-radius: 2px;
     margin: 10px;
-    padding: 1em;
+    background-color: #FFF;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.project-card:hover {
+    box-shadow: 0 0px 12px 0px rgba(0,0,0,0.3);
+}
+
+.project-card:hover .project-img-div {
+    margin-top: -50%;
+    transition: ease-out 0.5s;
+}
+
+.project-img-div {
+    height: 50%;
+    width: 100%;
+    background-color: #c4c4c4;
+}
+
+.project-name {
+    font-size: 120%;
+    font-weight: 500;
+}
+
+.project-info {
+    padding: 0.5em;
 }
 
 .archive {
@@ -91,4 +120,16 @@ html,body {
     width: 24px;
     border: 1px solid var(--primary);
     border-radius: 50%;
+}
+
+@media (max-width: 600px) {
+    .navbar {
+        padding: 0 4%;
+    }
+    .container {
+        margin: 4%;
+    }
+    .footer {
+        padding: 0 4%;
+    }
 }
