--- a/style.css
+++ b/style.css
@@ -93,19 +93,30 @@ html,body {
     padding: 0.5em;
 }
 
+.archive-bar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 .archive {
-    width: 80%;
-    height: 40px;
+    background-color: var(--primary);
     border: 2px solid var(--primary);
-    border-radius: 8px;
-    margin: 1em 0;
-    padding: 0.5em;
+    border-radius: 24px;
+    margin: 0.5em;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    color:#FFF;
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .footer{
     height: 50px;
     margin-top: 40px;
-    padding: 0 20%;
+    padding: 0 10%;
     background-color: #FFF;
     border-top: 1px solid #c4c4c4;
     /* box-shadow: 0 -4px 12px -2px rgba(0,0,0,0.3); */
@@ -114,7 +125,7 @@ html,body {
 .social {
     float: right;
     overflow: hidden;
-    margin: 0.5em 0.2em 0;
+    margin: 0.4em 0.2em 0;
     padding: 4px;
     height: 24px;
     width: 24px;
