--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ html,body {
 
 .container {
     min-height: 84%;
-    margin: 0 20%;
+    margin: 0 20% ;
 }
 
 .title {
@@ -72,9 +72,9 @@ html,body {
 }
 
 .project-card:hover {
-    transition: 0.5s;
-    box-shadow: 0 0px 12px 0px rgba(0,0,0,0.3);
-    transform: scale(1.5);
+    transition: 0.5s ease;
+    box-shadow: 0 0 12px 2px rgba(80,190,255,0.9);
+    transform: scale(1.1);
 }
 
 .project-data {
@@ -172,7 +172,7 @@ html,body {
 }
 
 .footer{
-    position: fixed;
+    position: static;
     bottom: 0;
     width: 100%;
     height: 50px;
