--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,111 +1,146 @@
 :root {
-    --primary: #0E76A8;
-    --light: #E1F1FD;
+  --primary: #0e76a8;
+  --light: #e1f1fd;
 }
 
-html,body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-color: var(--light);
-    /*font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
-    font-family: 'Poppins', sans-serif;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  /*background-color: var(--light);*/
+  /*font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
+  font-family: "Poppins", sans-serif;
+  font-size: bold 700;
+}
+body {
+  height: 100%;
+  width: 100%;
+  /*background-image: linear-gradient(dodgerblue,white);
+    background-repeat: no-repeat;
+    background-size: cover;*/
 }
 
-.navbar{
-    padding: 0 20%;
-    background-color: #FFF;
-    height: 50px;
-    position: sticky;
-    top: 0;
-    box-shadow: 0 4px 12px -2px rgba(0,0,0,0.3);
-}
-
-.logo {
-    height: 40px;
-    margin: 5px;
+.navbar {
+  padding: 0 20%;
+  background-color: #fff;
+  height: 12vh;
+  width: 100vw;
+  position: sticky;
+  top: 0;
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.3);
 }
 
 .container {
-    min-height: 84%;
-    margin: 0 20% ;
+  min-height: 84%;
+  margin: 0 20%;
+  position: relative;
 }
 
 .title {
-    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
-    font-size: 1.6rem;
-    color: var(--primary);
+  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
+  font-size: 1.6rem;
+  color: dodgerblue;
+  margin-left: 0px;
 }
 
 .cards {
-    display: flex;
-    flex-wrap: wrap;
-    /* height: 32vh;
+  display: flex;
+  flex-wrap: wrap;
+  /* height: 32vh;
     overflow-y: scroll; */
-    justify-content: space-evenly
+  justify-content: space-evenly;
 }
 
 .see-more {
-    font-size: 16px;
-    color: white;
-    background-color: var(--primary);
-    border: none;
-    border-radius: 16px;
-    display: block;
-    width: 100px;
-    height: 36px;
-    margin: 8px auto 0;
+  font-size: 16px;
+  color: white;
+  background-color: var(--primary);
+  border: none;
+  border-radius: 16px;
+  display: block;
+  width: 100px;
+  height: 36px;
+  margin: 8px auto 0;
 }
 
 .see-more:focus {
-    outline: none;
+  outline: none;
 }
-
+/*
 .project-card {
-    height: 220px;
+    height: 320px;
     width: 320px;
     border: 2px solid var(--primary);
-    border-radius: 2px;
+    border-radius: 25px;
     margin: 8px;
-    background-color: #FFF;
+    background-color:#FFF;
     cursor: pointer;
+    position:relative;
     padding: 0.5em;
 }
-
-.project-card:hover {
-    transition: 0.5s ease;
-    box-shadow: 0 0 12px 2px rgba(80,190,255,0.9);
-    transform: scale(1.1);
+*/
+.project-card
+{
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 1100px;
 }
+/*#ebf5fc*/
+.project-card
+{
+  width: 320px;
+  margin: 20px;
+  padding: 40px 30px;
+  background: #f4f9f9;
+  border-radius: 25px;
+  box-shadow: -6px -6px 20px rgba(255,255,255,1), 6px 6px 20px rgba(0,0,0,0.1);
+}
+.project-card:hover
+{
+  box-shadow: inset -6px -6px 20px rgba(80, 190, 255, 0.9), inset 6px 6px 20px rgba(0,0,0,0.05);
+}
+/*
+.project-card:hover {
+  transition: 0.5s ease;
+  box-shadow: 0 0 12px 2px rgba(80, 190, 255, 0.9);
+  background-color: #fff;
+  transform: scale(1.1);
+}*/
 
 .project-data {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .other-data {
-    width: 49%;
-    font-size: 14px;
+  width: 49%;
+  font-size: 14px;
 }
 
 .project-name {
-    font-size: 130%;
-    font-weight: 500;
-    margin-bottom: 0.4em;
+  font-size: 130%;
+  font-weight: 500;
+  margin-bottom: 0.4em;
 }
 
 .project-desc {
-    margin-top: 0.4em;
+  margin-top: 0.4em;
 }
 
 .repo-info {
-    width: 49%;
-    padding: 0.2em;
-    margin: 0.4em 0;
-    border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.3) ;
-    box-shadow: 0 -1px 12px rgba(0,0,0,0.3);
-    font-size: 14px;
+  width: 49%;
+  padding: 0.2em;
+  margin: 0.4em 0;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 -1px 12px rgba(0, 0, 0, 0.3);
+  font-size: 14px;
 }
 
 /* .languages {
@@ -113,118 +148,139 @@ html,body {
     flex-wrap: wrap;
 } */
 
-.stars,.forks, .lang {
-    display: inline-block;
-    background-color: var(--primary);
-    color: white;
-    padding: 0.1em 0.5em 0.2em;
-    margin: 2px;
-    border-radius: 12px;
+.stars,
+.forks,
+.lang {
+  display: inline-block;
+  background-color: var(--primary);
+  color: white;
+  padding: 0.1em 0.5em 0.2em;
+  margin: 2px;
+  border-radius: 12px;
 }
 
 .repo-link {
-    text-decoration: none;
-    color: var(--primary);
-    border: 2px solid var(--primary);
-    text-align: center;
-    padding: 8px 10px;
-    border-radius: 0 8px 8px 0;
-    height: 32px;
-    background-color: white;
-    margin-right: -43px;
-    margin-top: -10px;
+  text-decoration: none;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  text-align: center;
+  padding: 8px 10px;
+  border-radius: 0 8px 8px 0;
+  height: 32px;
+  background-color: white;
+  margin-right: -43px;
+  margin-top: -10px;
 }
 
 .repo-link:hover {
-    background-color: var(--primary);
-    color: white;
-    transition: 0.5s;
+  background-color: var(--primary);
+  color: white;
+  transition: 0.5s;
 }
 
 .archive {
-    display: inline-block;
-    border: 2px solid var(--primary);
-    border-radius: 8px;
-    margin: 0.2em 1em;
-    padding: 0.5em 0.8em;
-    font-size: 18px;
-    border-radius: 24px;
-    text-decoration: none;
-    color: white;
-    background-color: var(--primary);
+  display: inline-block;
+  border: 2px solid var(--primary);
+  margin: 0.5em;
+  padding: 0.5em 0.8em;
+  font-size: 18px;
+  border-radius: 4px;
+  text-decoration: none;
+  color:var(--primary) ;
+  background-color:white ;
+}
+.archive:hover{
+    transition: 0.5s ease;
+  box-shadow: 0 0 12px 2px rgba(80, 190, 255, 0.9);
+  background-color: #fff;
+  transform: scale(1.1);
+  text-decoration: none;
+
 }
 
 .archive-bars {
-    display: none;
-    transition: 0.5s;
+  display: none;
+  transition: 0.5s;
 }
 
 .notice-bar {
-    width: 80%;
-    background-color: #FFF;
-    border: 2px solid var(--primary);
-    border-radius: 0 20px 0 20px;
-    margin: 0.5em;
-    padding: 0.5em 1em;
-    text-decoration: none;
-    color:var(--primary);
-    font-size: 1rem;
-    font-weight: 600;
-    display: inline-block;
-    cursor: pointer;
+  width: 80%;
+  background-color: #fff;
+  border: 2px solid var(--primary);
+  border-radius: 0 20px 0 20px;
+  margin: 0.5em;
+  padding: 0.8em 1em;
+  text-decoration: none;
+  color: var(--primary);
+  font-size: 1rem;
+  font-weight: 600;
+  display: inline-block;
+  cursor: pointer;
+  
 }
 
-.footer{
-    position: static;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    margin-top: 40px;
-    background-color: #FFF;
-    border-top: 1px solid #c4c4c4;
-    /* box-shadow: 0 -4px 12px -2px rgba(0,0,0,0.3); */
+.footer {
+  position: static;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  margin-top: 40px;
+  background-color: #fff;
+  border-top: 1px solid #c4c4c4;
+  /* box-shadow: 0 -4px 12px -2px rgba(0,0,0,0.3); */
 }
 
 .socials {
-    margin-right: 10%;
-    float: right;
+  margin-right: 10%;
+  float: right;
+}
+.title {
+  color: black;
 }
 
 .social {
-    float: right;
-    margin: 0.5em 0.4em 0;
-    padding: 0;
-    height: 24px;
-    width: 24px;
-    text-decoration: none;
-    color: var(--primary);
-    font-size: 24px;
+  float: right;
+  margin: 0.5em 0.4em 0;
+  padding: 0;
+  height: 24px;
+  width: 24px;
+  text-decoration: none;
+  color: var(--primary);
+  font-size: 24px;
 }
-.website{
-    margin-top: 0.5em;
-    margin-left: 10%;
-    font-size: 24px;
-    color:var(--primary);
+.website {
+  margin-top: 0.5em;
+  margin-left: 10%;
+  font-size: 24px;
+  color: var(--primary);
 }
-.web-link{
-    font-family: 'Poppins', sans-serif;
-    text-decoration: none;
-    color: var(--primary);
-    font-weight: 200;
-    font-size: 20px;
+.web-link {
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
+  color: var(--primary);
+  font-weight: 200;
+  font-size: 20px;
+}
+.doodle {
+  position: fixed;
+  z-index: -1;
+}
+.logo {
+  text-align: center;
+  margin-left: 45%;
 }
 
 @media (max-width: 600px) {
-    .navbar {
-        padding: 0 4%;
-    }
-    .container {
-        margin: 4%;
-    }
-    .footer {
-        padding: 0;
-    }
-    .project-card:hover {
-        transform: none;
-    }
+  .navbar {
+    padding: 0 4%;
+  }
+  .container {
+    margin: 4%;
+  }
+  .footer {
+    padding: 0;
+  }
+  .project-card:hover {
+    transform: none;
+  }
 }
